Add treatments to make duration configurable
