# src/main/java/com/avimedical/appointments/scheduling/adapters/api/reasons/ReasonsMapper.java
@@ -1,7 +1,9 @@
 package com.avimedical.appointments.scheduling.adapters.api.reasons;
 
 import com.avimedical.appointments.generated.model.ReasonDto;
+import com.avimedical.appointments.generated.model.TreatmentDto;
 import com.avimedical.appointments.scheduling.domain.model.Reason;
+import com.avimedical.appointments.scheduling.domain.model.Treatment;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -18,6 +20,13 @@ class ReasonsMapper {
         return new ReasonDto()
                 .id(reason.getId())
                 .title(reason.getTitle())
+                .treatments(reason.getTreatments().stream().map(this::toDto).toList())
                 .description(reason.getDescription());
+    }
+
+    public TreatmentDto toDto(Treatment treatment) {
+        return new TreatmentDto()
+                .staff(treatment.getStaff().getName())
+                .duration(treatment.getDuration().toString());
     }
 }
